--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chromadb": "^1.8.1",
     "express": "^4.21.0",
     "langchain": "^0.2.18",
+    "mongoose": "^8.6.2",
     "multer": "1.4.5-lts.1",
     "pdf-parse": "^1.1.1"
   },
